Fix search overlay - proper z-index for logo and action buttons

--- a/public/assets/css/front.css
+++ b/public/assets/css/front.css
@@ -1031,7 +1031,7 @@ a [class*="far"] {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1050;
+  z-index: 1051;
   display: none;
   align-items: center;
   background: #fff;
@@ -1047,15 +1047,9 @@ a [class*="far"] {
   z-index: 1053;
 }
 
-.site-navbar.search-open .navbar-brand img,
-.site-navbar.search-open .navbar-brand span {
-  position: relative;
-  z-index: 1053;
-}
-
 .site-navbar.search-open #mainNav {
   position: relative;
-  z-index: 1051;
+  z-index: 1050;
 }
 
 .site-navbar.search-open #mainNav .gt-btn,
@@ -1065,10 +1059,8 @@ a [class*="far"] {
   z-index: 1053;
 }
 
-.site-navbar.search-open #mainNav > ul {
+.site-navbar.search-open .navbar-nav {
   visibility: hidden;
-  position: absolute;
-  width: 100%;
 }
 
 .nav-search-form {
@@ -1076,7 +1068,7 @@ a [class*="far"] {
   align-items: center;
   width: 100%;
   height: 100%;
-  max-width: 700px;
+  max-width: 600px;
 }
 
 .nav-search-back {
